[package]
name = "ssi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.53"
serde_json = "1.0.81"
signature = "1.5.0"
map = "0.0.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
assert-json-diff = "2.0.2"
